--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="description" content="This is the personal website of Jessica Ferreira, a programmer in London, UK.">
     <meta name="keywords" content="HTML, JavaScript, XLM, CSS">
     <meta name="author" content="Jessica Ferreira">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta property="og:image" content="Images/socialmedia.png">
+    <meta property="og:type" content="website">
     <title>Jessica Ferreira - A programmer</title>
     <link rel="stylesheet" type="text/css" href="CSS/styles.css">
     <link rel="icon" href="Images/favicon.ico">
