--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="keywords" content="HTML, JavaScript, XLM, CSS">
     <meta name="author" content="Jessica Ferreira">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <meta property="og:image" content="Images/socialmedia.png">
+    <meta property="og:image" content="https://raw.githubusercontent.com/jessicabalkestahl/website/master/Images/JessAvatar.png">
     <meta property="og:type" content="website">
     <title>Jessica Ferreira - A programmer</title>
     <link rel="stylesheet" type="text/css" href="CSS/styles.css">
