--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta property="og:image" content="https://raw.githubusercontent.com/jessicabalkestahl/website/master/Images/JessAvatar.png">
     <meta property="og:type" content="website">
     <meta name="twitter:card" content="summary_large_image">
-    meta name="twitter:image" content="https://raw.githubusercontent.com/jessicabalkestahl/website/master/Images/JessAvatar.png">
+    <meta name="twitter:image" content="https://raw.githubusercontent.com/jessicabalkestahl/website/master/Images/JessAvatar.png">
     <title>Jessica Ferreira - A programmer</title>
     <link rel="stylesheet" type="text/css" href="CSS/styles.css">
     <link rel="icon" href="Images/favicon.ico">
