--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="description" content="This is the personal website of Jessica Ferreira, a programmer in London, UK.">
     <meta name="keywords" content="HTML, JavaScript, XLM, CSS">
     <meta name="author" content="Jessica Ferreira">
-    <meta name="twitter:image" content="Images/socialmedia.png">
+    <meta name="twitter:image" content="Images/JessAvatar.png">
     <title>Jessica Ferreira - A programmer</title>
     <link rel="stylesheet" type="text/css" href="CSS/styles.css">
     <link rel="icon" href="Images/favicon.ico">
