--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta name="description" content="This is the personal website of Jessica Ferreira, a programmer in London, UK.">
     <meta name="keywords" content="HTML, JavaScript, XLM, CSS">
     <meta name="author" content="Jessica Ferreira">
-    <title>Jessica Ferreira - A programmer</title>
+    <meta property='twitter:title' content="Jessica Ferreira - a programmer"/>
+    <meta property='twitter:image' content="https://domain.com/some/url/path/to/image"/>
+    <meta name="twitter:card" content="summary_large_image"/>
+    <title>Jessica Ferreira - a programmer</title>
     <link rel="stylesheet" type="text/css" href="CSS/styles.css">
     <link rel="icon" href="Images/favicon.ico">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto&family=Sacramento&display=swap" rel="stylesheet">
