--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta property='twitter:title' content="Jessica Ferreira - a programmer"/>
     <meta property='twitter:image' content="https://domain.com/some/url/path/to/image"/>
     <meta name="twitter:card" content="summary_large_image"/>
+    <meta name="twitter:image" content="https://github.com/jessicabalkestahl/website/blob/master/Images/socialmedia.png?raw=true">
     <title>Jessica Ferreira - a programmer</title>
     <link rel="stylesheet" type="text/css" href="CSS/styles.css">
     <link rel="icon" href="Images/favicon.ico">
