--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="description" content="This is the personal website of Jessica Ferreira, a programmer in London, UK.">
     <meta name="keywords" content="HTML, JavaScript, XLM, CSS">
     <meta name="author" content="Jessica Ferreira">
-    <meta property="twitter:title" content="Jessica Ferreira - a programmer"/>
+    <meta property="twitter:title" content="Work in progress towards being a professional web developer."/>
     <meta property="twitter:image" content="https://github.com/jessicabalkestahl/website/blob/master/Images/socialmedia.png?raw=true"/>
     <meta name="twitter:card" content="summary_large_image"/>
     <title>Jessica Ferreira - a programmer</title>
