--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="keywords" content="HTML, JavaScript, XLM, CSS">
     <meta name="author" content="Jessica Ferreira">
     <meta property="og:image" content="https://github.com/jessicabalkestahl/website/blob/master/Images/socialmedia.png?raw=true">
-    <meta property="og:title" content="Jessica Ferreira - a programmer">
+    <meta property="og:title" content="Working towards being a professional web developer.">
     <meta property="og:type" content="website">
     <meta property="og:description" content="Working towards being a professional web developer.">
     <title>Jessica Ferreira - a programmer</title>
