--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
     <br>
     <br>
     <div class="bottom-container">
-      <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
+      <a class="footer-link" href="https://www.linkedin.com/"> <img src="Images/linkedin.png" alt="Linkedin Icon" width="3%"> </a>
+      <a class="footer-link" href="https://www.twitter.com/"> <img src="Images/twitter.png" alt="Twitter Icon" width="3%"> </a>
       <p class="copyright">© 2020 Jessica Ferreira.</p>
       <p class="Flaticon"> Icons made by <a class="Flaticon"href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a class="Flaticon"href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a></p>
     </div>
